# ai-engineering-os

./: .gitignore  APPLY_ORDER.md  COMMITS.md  PUSH_INSTRUCTIONS.md  README.md  README_DELIVERY_0008.md  pyproject.toml
AEOS-0001-Engineering-Runtime-Foundation/: README.md
AEOS-0003-Agent-Schema-Foundation/: README.md
AEOS-0004-Software-Architect-Agent/: README.md
AEOS-0005/: COMMIT_MESSAGE.txt
AEOS-0005-Product-Manager-Agent/: README.md
AEOS-0006/: COMMIT_MESSAGE.txt
AEOS-0006-Business-Analyst-Agent/: README.md
AEOS-0007/: COMMIT_MESSAGE.txt
AEOS-0007-DevOps-Agent/: README.md
AEOS-0008/: COMMIT_MESSAGE.txt
AEOS-0008-QA-Agent/: README.md
AEOS-0009/: COMMIT_MESSAGE.txt
AEOS-0009-Orchestrator/: README.md
AEOS-0010/: COMMIT_MESSAGE.txt
AEOS-0010-Agent-Registry/: README.md
AEOS-0011/: COMMIT_MESSAGE.txt
AEOS-0012/: COMMIT_MESSAGE.txt
AEOS-0013/: COMMIT_MESSAGE.txt
AEOS-0014/: COMMIT_MESSAGE.txt
AEOS-0015/: COMMIT_MESSAGE.txt
AEOS-BATCH-0004/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0005/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0006/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0007/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0008/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0009/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0010/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0011/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0012/: APPLY_ORDER.md  COMMITS.md
AEOS-BATCH-0013/: APPLY_ORDER.md  COMMITS.md
AEOS-DELIVERY-0001/: APPLY_ORDER.md  COMMITS.md  README_DELIVERY_0001.md
AEOS-DELIVERY-0002/: APPLY_ORDER.md  COMMITS.md  README_DELIVERY_0002.md
(+337 files in other folders)
